Snippet Sphere name

--- a/onlinecompiler.client/index.html
+++ b/onlinecompiler.client/index.html
@@ -1,13 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/oc.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Online Compiler</title>
-  </head>
-  <body>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Snippet Sphere is an online code editor and compiler that allows you to write, test, and download code snippets across multiple programming languages." />
+    <meta name="keywords" content="Snippet Sphere, online code editor, code snippets, compile code online, download code, programming languages, code testing" />
+    <meta name="author" content="Syed Kashan Abbas Naqvi" />
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="Snippet Sphere - Your Ultimate Online Code Editor" />
+    <meta property="og:description" content="Write, test, and download code snippets across multiple programming languages with Snippet Sphere, the perfect platform for developers." />
+    <meta property="og:image" content="/oc.png" /> <!-- Add path to your image -->
+    <!-- <meta property="og:url" content="https://snippetsphere.com" /> -->
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Meta Tags -->
+    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
+    <meta name="twitter:title" content="Snippet Sphere - Your Ultimate Online Code Editor" />
+    <meta name="twitter:description" content="Write, test, and download code snippets across multiple programming languages with Snippet Sphere." />
+    <!-- <meta name="twitter:image" content="https://yourwebsite.com/path-to-twitter-image.png" /> -->
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/oc.png" />
+
+    <title>Snippet Sphere</title>
+</head>
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
 </html>
